# CanvasLMS-CLI

./: .gitignore  CONTRIBUTING.md  README.md  canvas_cli.py  canvas_cli_cmd_handler.py  canvas_cli_rich.py  canvas_cli_ui.py  canvas_client.py  canvas_grades_loader.py  canvas_grades_uploader.py  canvas_request_executor.py  config.example.py  markdown_converter.py  pyproject.toml  requirements.txt  rich_ui.py  setup.py
canvascli/: __init__.py  __main__.py  app.py  config.example.py
canvascli/api/: client.py  request_executor.py
canvascli/cli/: cmd_handler.py
canvascli/converters/: markdown_converter.py
canvascli/grades/: loader.py  uploader.py
documentation/: CanvasCLI-UsageManual.md
