[project]
name = "canvaslms-cli"
version = "0.1.0"
description = "A powerful command-line interface for managing Canvas LMS courses, students, assignments, and grade uploads."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cmd2>=2.4.0",
    "markdown>=3.4.0",
    "pandas>=1.5.0",
    "pathlib2>=2.3.0 ; python_full_version < '3.4'",
    "pdfkit>=1.0.0",
    "pygments>=2.13.0",
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
    "weasyprint>=59.0",
]
