[project]
name = "canvaslms-cli"
version = "0.1.0"
description = "A powerful command-line interface for managing Canvas LMS courses, students, assignments, and grade uploads."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.4.0",
    "markdownify>=1.2.2",
    "pandas>=1.5.0",
    "pdfkit>=1.0.0",
    "prompt-toolkit>=3.0.52",
    "pygments>=2.13.0",
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "weasyprint>=59.0",
]
